# scummvm_esp32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/LovyanGFX/: CMakeLists.txt
components/LovyanGFX/src/lgfx/v1/panel/: Panel_ST7789.hpp
components/audio/: CMakeLists.txt  adlib.cpp  audiostream.cpp  mididrv.cpp  midiparser_smf.cpp  mixer.cpp  rate.cpp
components/audio/decoders/: ac3.cpp  ac3.h  qdm2.cpp  xa.cpp
components/audio/mods/: paula.cpp  paula.h
components/audio/softsynth/: cms.cpp  cms.h  fluidsynth.cpp  mt32.cpp  sid.cpp  sid.h
components/audio/softsynth/fmtowns_pc98/: towns_pc98_fmsynth.cpp
components/audio/softsynth/mt32/: SampleRateConverter.h
components/audio/softsynth/opl/: dbopl.cpp  dosbox.cpp  dosbox.h  mame.cpp  mame.h
components/backends/: CMakeLists.txt  modular-backend.cpp
components/backends/platform/esp32/: osystem-audio.cpp  osystem-display.cpp  osystem-events.cpp  osystem-input.cpp  osystem-sdcard.cpp  osystem-ui.cpp  osystem.cpp  osystem.h  osystem_gfx.cpp
components/backends/platform/esp32/fonts/: Font0_11px.h  Font1_11px.h  Font2_14px.h  Font7_15px.h
components/base/: CMakeLists.txt  main.cpp  plugins.cpp
components/cine/: CMakeLists.txt  detection.cpp
components/common/: CMakeLists.txt  config-manager.cpp  cosinetables.h  debug.h  file.cpp  frac.h  math.h  queue.h  rational.cpp  rational.h  scummsys.h  sinetables.h  singleton.h  stack.h  util.cpp
components/engines/: CMakeLists.txt  advancedDetector.cpp  engine.cpp
components/graphics/: CMakeLists.txt  surface.cpp
components/gui/: CMakeLists.txt
components/image/: CMakeLists.txt
components/scumm/: CMakeLists.txt  charset.cpp  detection.cpp  file.cpp  file_nes.cpp  input.cpp  object.cpp  palette.cpp  resource.cpp  resource_v4.cpp  scumm.cpp  scumm.h  scumm_v7.h  sound.cpp  string.cpp  vars.cpp
components/scumm/he/: script_v72he.cpp
components/scumm/insane/: insane.cpp
components/scumm/players/: player_ad.cpp
images/: purple.MOV
main/: CMakeLists.txt  image_splash.h  main.cpp
